// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Named query 1`] = `
Object {
  "events": Array [],
  "parseTree": Object {
    "queries": Array [
      Object {
        "name": "GetAllUsers",
        "params": Array [],
        "statement": "SELECT * FROM users",
        "usedParamSet": Set {},
      },
    ],
  },
}
`;

exports[`Named query with a valid param 1`] = `
Object {
  "events": Array [
    Object {
      "location": Object {
        "a": undefined,
        "b": undefined,
        "col": 24,
        "line": 6,
      },
      "message": Object {
        "text": "Parse error: token recognition error at: '('",
        "type": 0,
      },
      "type": 2,
    },
    Object {
      "location": Object {
        "a": undefined,
        "b": undefined,
        "col": 38,
        "line": 6,
      },
      "message": Object {
        "text": "Parse error: token recognition error at: ','",
        "type": 0,
      },
      "type": 2,
    },
    Object {
      "location": Object {
        "a": undefined,
        "b": undefined,
        "col": 52,
        "line": 6,
      },
      "message": Object {
        "text": "Parse error: token recognition error at: ','",
        "type": 0,
      },
      "type": 2,
    },
    Object {
      "location": Object {
        "a": undefined,
        "b": undefined,
        "col": 61,
        "line": 6,
      },
      "message": Object {
        "text": "Parse error: token recognition error at: ')'",
        "type": 0,
      },
      "type": 2,
    },
    Object {
      "location": Object {
        "a": 42,
        "b": 49,
        "col": 11,
        "line": 4,
      },
      "message": Object {
        "text": "Parameter \\"customer\\" is defined but never used",
        "type": 0,
      },
      "type": 1,
    },
  ],
  "parseTree": Object {
    "queries": Array [
      Object {
        "name": "CreateCustomer",
        "params": Array [
          Object {
            "codeRefs": Object {
              "defined": Object {
                "a": 42,
                "b": 49,
                "col": 11,
                "line": 4,
              },
            },
            "name": "customer",
            "transform": Object {
              "keys": Array [
                "customerName",
                "contactName",
                "address",
              ],
              "type": "pick_tuple",
            },
          },
          Object {
            "codeRefs": Object {
              "used": Object {
                "a": 169,
                "b": 177,
                "col": 10,
                "line": 7,
              },
            },
            "name": "customers",
            "transform": Object {
              "type": "scalar",
            },
          },
        ],
        "statement": "INSERT INTO customers customer_name contact_name address VALUES :customers",
        "usedParamSet": Set {
          "customers",
        },
      },
    ],
  },
}
`;

exports[`Named query with an inferred param 1`] = `
Object {
  "events": Array [],
  "parseTree": Object {
    "queries": Array [
      Object {
        "name": "GetUserById",
        "params": Array [
          Object {
            "codeRefs": Object {
              "used": Object {
                "a": 65,
                "b": 70,
                "col": 38,
                "line": 3,
              },
            },
            "name": "userId",
            "transform": Object {
              "type": "scalar",
            },
          },
        ],
        "statement": "SELECT * FROM users WHERE userId = :userId",
        "usedParamSet": Set {
          "userId",
        },
      },
    ],
  },
}
`;

exports[`Parse tree 1 1`] = `
Object {
  "events": Array [
    Object {
      "location": Object {
        "a": undefined,
        "b": undefined,
        "col": 18,
        "line": 4,
      },
      "message": Object {
        "text": "Parse error: token recognition error at: '1'",
        "type": 0,
      },
      "type": 2,
    },
    Object {
      "location": Object {
        "a": undefined,
        "b": undefined,
        "col": 19,
        "line": 4,
      },
      "message": Object {
        "text": "Parse error: token recognition error at: '2'",
        "type": 0,
      },
      "type": 2,
    },
    Object {
      "location": Object {
        "a": 32,
        "b": 40,
        "col": 9,
        "line": 3,
      },
      "message": Object {
        "text": "Parameter \\"userNames\\" is defined but never used",
        "type": 0,
      },
      "type": 1,
    },
    Object {
      "location": Object {
        "a": 91,
        "b": 95,
        "col": 9,
        "line": 5,
      },
      "message": Object {
        "text": "Parameter \\"users\\" is defined but never used",
        "type": 0,
      },
      "type": 1,
    },
  ],
  "parseTree": Object {
    "queries": Array [
      Object {
        "name": "GetAllUsers",
        "params": Array [
          Object {
            "codeRefs": Object {
              "defined": Object {
                "a": 32,
                "b": 40,
                "col": 9,
                "line": 3,
              },
            },
            "name": "userNames",
            "transform": Object {
              "type": "array_spread",
            },
          },
          Object {
            "codeRefs": Object {
              "defined": Object {
                "a": 60,
                "b": 63,
                "col": 9,
                "line": 4,
              },
              "used": Object {
                "a": 154,
                "b": 157,
                "col": 34,
                "line": 7,
              },
            },
            "name": "user",
            "transform": Object {
              "keys": Array [
                "name",
                "age",
              ],
              "type": "pick_tuple",
            },
          },
          Object {
            "codeRefs": Object {
              "defined": Object {
                "a": 91,
                "b": 95,
                "col": 9,
                "line": 5,
              },
            },
            "name": "users",
            "transform": Object {
              "keys": Array [
                "name",
                "time",
              ],
              "type": "pick_array_spread",
            },
          },
        ],
        "statement": "select * from users where user = :user",
        "usedParamSet": Set {
          "user",
        },
      },
    ],
  },
}
`;

exports[`Unused parameters produce warnings 1`] = `
Object {
  "events": Array [
    Object {
      "location": Object {
        "a": 39,
        "b": 47,
        "col": 11,
        "line": 4,
      },
      "message": Object {
        "text": "Parameter \\"userNames\\" is defined but never used",
        "type": 0,
      },
      "type": 1,
    },
    Object {
      "location": Object {
        "a": 69,
        "b": 73,
        "col": 11,
        "line": 5,
      },
      "message": Object {
        "text": "Parameter \\"users\\" is defined but never used",
        "type": 0,
      },
      "type": 1,
    },
  ],
  "parseTree": Object {
    "queries": Array [
      Object {
        "name": "GetAllUsers",
        "params": Array [
          Object {
            "codeRefs": Object {
              "defined": Object {
                "a": 39,
                "b": 47,
                "col": 11,
                "line": 4,
              },
            },
            "name": "userNames",
            "transform": Object {
              "type": "array_spread",
            },
          },
          Object {
            "codeRefs": Object {
              "defined": Object {
                "a": 69,
                "b": 73,
                "col": 11,
                "line": 5,
              },
            },
            "name": "users",
            "transform": Object {
              "keys": Array [
                "name",
                "time",
              ],
              "type": "pick_array_spread",
            },
          },
        ],
        "statement": "SELECT * FROM users",
        "usedParamSet": Set {},
      },
    ],
  },
}
`;
